--- a/GatewayRequestApi/appsettings.json
+++ b/GatewayRequestApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:gateway-request-sql-server.database.windows.net,1433;Initial Catalog=Gateway;Persist Security Info=False;User ID=gatewayadmin;Password=password@12345#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "EventBus": "Endpoint=sb://gateway-messaging.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=qkBjKbAm53hXoA4h36Keg2QdRssYUOvJR+ASbIOzGfo=",
+    "DefaultConnection": "Server=tcp:gateway-request-sql-server.database.windows.net,1433;Initial Catalog=Gateway;Persist Security Info=False;User ID=---user---;Password=----password----;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "EventBus": "Endpoint=sb://gateway-messaging.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=-------Service-Bus-Key--------------",
     "ApplicationInsightConnectionString": "--placeholderforapplicationisightconnectionstring--"
   },
   "EventBus": {
