--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
           - gatewayrabbitmq
         environment:
           - SQL_DB_CONNECTION_STRING=Data Source=gateway-db;Database=Gateway;Integrated Security=False;User ID=---user---;Password=----hidden-Vale----password@12345#;MultipleActiveResultSets=false;TrustServerCertificate=True;
-          - APPLICATIONINSIGHTS_CONNECTION_STRING=InstrumentationKey=------hidden--Value-----;IngestionEndpoint=https://uksouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://uksouth.livediagnostics.monitor.azure.com/;ApplicationId=2d0bdcb7-1f3c-4212-83aa-c381d4125727;
+          - APPLICATIONINSIGHTS_CONNECTION_STRING=--------------------InstrumentationKey------------------;
           - AZURE_SERVICE_BUS_CONNECTION_STRING=Endpoint=sb://gateway-messaging.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=-----hidden----Value------;
           - MSG_HOST=gateway-rabbitmq
         networks:
